--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blox-fruit",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,17 +10,17 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "@tsconfig/svelte": "^5.0.2",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tsconfig/svelte": "^5.0.4",
     "autoprefixer": "^10.4.18",
     "postcss-load-config": "^5.0.2",
     "postcss": "^8.4.33",
-    "svelte-check": "^3.6.6",
-    "svelte-preprocess": "^5.1.3",
-    "svelte": "^5.0.0-next.70",
-    "tailwindcss": "^3.4.1",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4"
+    "svelte-check": "^4.1.1",
+    "svelte-preprocess": "^6.0.3",
+    "svelte": "^5.16.0",
+    "tailwindcss": "^3.4.17",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.6"
   }
 }
